# cardano-dev-2024

./: .gitpod.Dockerfile
docs/: README.md
examples-aiken/: .gitignore  README.md  aiken.toml
examples-aiken/.devcontainer/: Dockerfile  devcontainer.json
examples-aiken/offchain/: check-42-validator-assets.ts  check-gift-or-burn-validator-assets.ts  check-wallets-assets.ts  generate-alice-and-bob.ts  instance-lucid.ts  lock-ada-in-42-validator.ts  lock-ada-in-gift-or-burn-validators.ts  unlock-ada-form-42-validator.ts  unlock-ada-form-gif-or-burn-validators.ts
examples-aiken/offchain/lucid/: package.json
examples-haskell/.devcontainer/: Dockerfile  devcontainer.json
examples-haskell/02-overview-haskell/: overview-haskell.cabal
examples-haskell/02-overview-haskell/src/: OverviewHaskell.hs  Polymorphism.hs
examples-haskell/03-datatypes-functions/: datatypes-functions.cabal
examples-haskell/03-datatypes-functions/src/: DatatypesFunctions.hs
