cabal-version:       3.4
name:                overview-haskell
version:             0.1.0.0
author:              Lars Bruenjes
maintainer:          brunjlar@gmail.com
build-type:          Simple

library
  exposed-modules:     OverviewHaskell
                     , Polymorphism
  hs-source-dirs:      src
  build-depends:       base ^>=4.18
  default-language:    Haskell2010
  ghc-options:         -Wall
